--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -69,7 +69,9 @@ target_link_libraries(Fem ${Fem_LIBS})
 fc_target_copy_resource(Fem 
     ${CMAKE_SOURCE_DIR}/src/Mod/Fem
     ${CMAKE_BINARY_DIR}/Mod/Fem
-    Init.py convert2TetGen.py)
+    Init.py 
+    convert2TetGen.py
+    FemLib.py)
 
 if(MSVC)
     set_target_properties(Fem PROPERTIES SUFFIX ".pyd")
