Dialog for dealing with creation and edeting of node sets

--- a/src/Mod/Fem/Gui/CMakeLists.txt
+++ b/src/Mod/Fem/Gui/CMakeLists.txt
@@ -31,30 +31,58 @@ endif(SMESH_FOUND)
 
 set(FemGui_MOC_HDRS
     Hypothesis.h
+    TaskObjectName.h
+    TaskCreateNodeSet.h
+    TaskDlgCreateNodeSet.h
 )
 fc_wrap_cpp(FemGui_MOC_SRCS ${FemGui_MOC_HDRS})
 SOURCE_GROUP("Moc" FILES ${FemGui_MOC_SRCS})
 
 set(FemGui_UIC_SRCS
     Hypothesis.ui
+    TaskCreateNodeSet.ui
+    TaskObjectName.ui
 )
 qt4_wrap_ui(FemGui_UIC_HDRS ${FemGui_UIC_SRCS})
-SET(FemGui_DLG_SRCS
-    ${FemGui_UIC_HDRS}
-    Hypothesis.ui
-    Hypothesis.cpp
-    Hypothesis.h
-)
-SOURCE_GROUP("Dialogs" FILES ${FemGui_DLG_SRCS})
 
 qt4_add_resources(FemResource_SRCS Resources/Fem.qrc)
 
 SOURCE_GROUP("Resources" FILES ${FemResource_SRCS})
 
+SET(FemGui_SRCS_ViewProvider
+    ViewProviderFemMesh.cpp
+    ViewProviderFemMesh.h
+    ViewProviderSetNodes.cpp
+    ViewProviderSetNodes.h
+    ViewProviderSetElements.cpp
+    ViewProviderSetElements.h
+    ViewProviderSetFaces.cpp
+    ViewProviderSetFaces.h
+    ViewProviderSetGeometry.cpp
+    ViewProviderSetGeometry.h
+)
+SOURCE_GROUP("ViewProvider" FILES ${FemGui_SRCS_ViewProvider})
 
-SET(FemGui_SRCS
-    ${FemGui_DLG_SRCS}
-    ${FemResource_SRCS}
+SET(FemGui_SRCS_TaskBoxes
+	TaskObjectName.ui
+    TaskObjectName.cpp
+    TaskObjectName.h
+	TaskCreateNodeSet.ui
+    TaskCreateNodeSet.cpp
+    TaskCreateNodeSet.h
+)
+SOURCE_GROUP("Task_Boxes" FILES ${FemGui_SRCS_TaskBoxes})
+
+SET(FemGui_SRCS_TaskDlg
+    TaskDlgCreateNodeSet.h
+    TaskDlgCreateNodeSet.cpp
+    Hypothesis.ui
+    Hypothesis.cpp
+    Hypothesis.h
+)
+SOURCE_GROUP("Task_Dialogs" FILES ${FemGui_SRCS_TaskDlg})
+
+SET(FemGui_SRCS_Module
     AppFemGui.cpp
     AppFemGuiPy.cpp
     Command.cpp
@@ -63,9 +91,20 @@ SET(FemGui_SRCS
     PreCompiled.h
     Workbench.cpp
     Workbench.h
-    ViewProviderFemMesh.cpp
-    ViewProviderFemMesh.h
 )
+SOURCE_GROUP("Module" FILES ${FemGui_SRCS_Module})
+
+SET(FemGui_SRCS
+    ${FemGui_UIC_HDRS}
+    ${FemGui_DLG_SRCS}
+    ${FemResource_SRCS}
+    ${FemGui_SRCS_ViewProvider}
+    ${FemGui_SRCS_TaskDlg}
+    ${FemGui_SRCS_TaskBoxes}
+    ${FemGui_SRCS_Module}
+)
+
+
 
 add_library(FemGui SHARED ${FemGui_SRCS})
 target_link_libraries(FemGui ${FemGui_LIBS})
