--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -39,6 +39,7 @@ SET(Python_SRCS
     HypothesisPy.cpp
     HypothesisPy.h
 )
+SOURCE_GROUP("Python" FILES ${Python_SRCS})
 
 SET(Mod_SRCS
     AppFem.cpp
@@ -46,10 +47,25 @@ SET(Mod_SRCS
     PreCompiled.cpp
     PreCompiled.h
 )
+SOURCE_GROUP("Module" FILES ${Mod_SRCS})
 
-SET(Fem_SRCS
+
+SET(FemBase_SRCS
     FemMeshObject.cpp
     FemMeshObject.h
+    FemMeshShapeObject.cpp
+    FemMeshShapeObject.h
+    FemAnalysis.cpp
+    FemAnalysis.h
+    FemMesh.cpp
+    FemMesh.h
+    FemMeshProperty.cpp
+    FemMeshProperty.h
+	)
+SOURCE_GROUP("Base types" FILES ${FemBase_SRCS})
+	
+	
+SET(FemSet_SRCS
     FemSetObject.cpp
     FemSetObject.h
     FemSetNodesObject.cpp
@@ -60,10 +76,10 @@ SET(Fem_SRCS
     FemSetFacesObject.h
     FemSetGeometryObject.cpp
     FemSetGeometryObject.h
-    FemMesh.cpp
-    FemMesh.h
-    FemMeshProperty.cpp
-    FemMeshProperty.h
+	)
+SOURCE_GROUP("Set objects" FILES ${FemSet_SRCS})
+	
+SET(FemConstraints_SRCS
     FemConstraint.cpp
     FemConstraint.h
     FemConstraintBearing.h
@@ -76,13 +92,18 @@ SET(Fem_SRCS
     FemConstraintGear.h
     FemConstraintPulley.cpp
     FemConstraintPulley.h
+	)
+SOURCE_GROUP("Constraints" FILES ${FemConstraints_SRCS})
+
+SET(Fem_SRCS
+	${FemBase_SRCS}
+	${FemSet_SRCS}
+	${FemConstraints_SRCS}
     ${Mod_SRCS}
     ${Python_SRCS}
 )
 
 
-SOURCE_GROUP("Python" FILES ${Python_SRCS})
-SOURCE_GROUP("Module" FILES ${Mod_SRCS})
 
 add_library(Fem SHARED ${Fem_SRCS})
 target_link_libraries(Fem ${Fem_LIBS})
