--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -24,6 +24,7 @@ link_directories(${OCC_LIBRARY_DIR})
 
 set(Part_LIBS 
     ${OCC_LIBRARIES}
+    ${OCC_DEBUG_LIBRARIES}
     ${FREETYPE_LIBRARY}                    
     FreeCADApp
 )
