--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -19,6 +19,7 @@ link_directories(${OCC_LIBRARY_DIR})
 set(Raytracing_LIBS
     Part
     ${OCC_LIBRARIES}
+    ${OCC_DEBUG_LIBRARIES}
     FreeCADApp
 )
 
