Disable NetgenPlugin for gcc and mingw

--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -1,8 +1,10 @@
 
+if (MSVC)
 add_subdirectory(App)
 if(FREECAD_BUILD_GUI)
     add_subdirectory(Gui)
 endif(FREECAD_BUILD_GUI)
+
 
 INSTALL(
     FILES
@@ -13,3 +15,5 @@ INSTALL(
     DESTINATION
         Mod/Fem
 )
+
+endif(MSVC)
