--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -25,9 +25,15 @@ link_directories(${OCC_LIBRARY_DIR})
 set(Part_LIBS 
     ${OCC_LIBRARIES}
     ${OCC_DEBUG_LIBRARIES}
-    ${FREETYPE_LIBRARY}                    
     FreeCADApp
 )
+
+if(FREECAD_USE_FREETYPE)
+    set(Part_LIBS 
+        ${Part_LIBS}
+        ${FREETYPE_LIBRARY}
+    )
+endif(FREECAD_USE_FREETYPE)
 
 generate_from_xml(ArcPy)
 generate_from_xml(ArcOfCirclePy)
