Add ViewProvider and Dialogs for Analysis object and the Netgen mesher object

--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -54,6 +54,8 @@ SET(FemBase_SRCS
     FemMeshObject.h
     FemMeshShapeObject.cpp
     FemMeshShapeObject.h
+    FemMeshShapeNetgenObject.cpp
+    FemMeshShapeNetgenObject.h
     FemAnalysis.cpp
     FemAnalysis.h
     FemMesh.cpp
@@ -102,6 +104,7 @@ SET(Fem_SRCS
     ${Python_SRCS}
 )
 
+FILE( GLOB Driver_Resources Driver/*.py )
 
 
 add_library(Fem SHARED ${Fem_SRCS})
@@ -111,10 +114,12 @@ target_link_libraries(Fem ${Fem_LIBS})
 fc_target_copy_resource(Fem 
     ${CMAKE_SOURCE_DIR}/src/Mod/Fem
     ${CMAKE_BINARY_DIR}/Mod/Fem
-    Init.py 
+	${Driver_Resources} 
+	Init.py 
     convert2TetGen.py
     FemLib.py)
 
+	
 if(MSVC)
     set_target_properties(Fem PROPERTIES SUFFIX ".pyd")
     set_target_properties(Fem PROPERTIES DEBUG_OUTPUT_NAME "Fem_d")
