--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -99,6 +99,8 @@ set(Gui_MOC_HDRS
     Control.h
     DemoMode.h
     DownloadDialog.h
+    DownloadItem.h
+    DownloadManager.h
     DlgActionsImp.h
     DlgActivateWindowImp.h
     DlgCommandsImp.h
@@ -220,6 +222,8 @@ SET(Gui_UIC_SRCS
     DlgTreeWidget.ui
     DlgLocationAngle.ui
     DlgLocationPos.ui
+    DownloadManager.ui
+    DownloadItem.ui
     MouseButtons.ui
     SceneInspector.ui
     InputVector.ui
@@ -282,6 +286,8 @@ SET(Dialog_CPP_SRCS
     TextureMapping.cpp
     Transform.cpp
     DownloadDialog.cpp
+    DownloadItem.cpp
+    DownloadManager.cpp
 )
 
 SET(Dialog_HPP_SRCS
@@ -307,6 +313,8 @@ SET(Dialog_HPP_SRCS
     TextureMapping.h
     Transform.h
     DownloadDialog.h
+    DownloadItem.h
+    DownloadManager.h
 )
 
 SET(Dialog_SRCS
@@ -327,6 +335,8 @@ SET(Dialog_SRCS
     DlgProjectUtility.ui
     DlgTipOfTheDay.ui
     DlgTreeWidget.ui
+    DownloadManager.ui
+    DownloadItem.ui
     MouseButtons.ui
     InputVector.ui
     Placement.ui
