Add file importer, standard material and Yoriks gui prototype

--- a/src/Mod/CMakeLists.txt
+++ b/src/Mod/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(Image)
 add_subdirectory(Mesh)
 
 add_subdirectory(Part)
+add_subdirectory(Material)
 add_subdirectory(PartDesign)
 add_subdirectory(Raytracing)
 add_subdirectory(Drawing)
@@ -37,9 +38,10 @@ add_subdirectory(Assembly)
 if(FREECAD_BUILD_CAM)
     add_subdirectory(Cam)
 endif(FREECAD_BUILD_CAM)
-if(FREECAD_BUILD_FEM)
+#if(FREECAD_BUILD_FEM)
     add_subdirectory(Fem)
-endif(FREECAD_BUILD_FEM)
+#	MESSAGE("Build FEM")
+#endif(FREECAD_BUILD_FEM)
 if(FREECAD_BUILD_SANDBOX)
     add_subdirectory(Sandbox)
 endif(FREECAD_BUILD_SANDBOX)
