--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -892,7 +892,12 @@ else(WIN32)
     INSTALL(TARGETS FreeCADGui
         LIBRARY DESTINATION lib
     )
-    INSTALL(FILES Icons/freecad.xpm Icons/freecad-doc.png
+    INSTALL(FILES Icons/freecad.xpm
+        Icons/freecad-icon-16.png
+        Icons/freecad-icon-32.png
+        Icons/freecad-icon-64.png
+        Icons/freecad.svg
+        Icons/freecad-doc.png
         DESTINATION ${CMAKE_INSTALL_DATADIR}
     )
 endif(WIN32)
