--- a/package/debian/control
+++ b/package/debian/control
@@ -5,25 +5,26 @@ Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.
 Uploaders: Teemu Ikonen <tpikonen@gmail.com>, "Adam C. Powell, IV" <hazelsct@debian.org>, Anton Gladky <gladky.anton@gmail.com>
 Vcs-Browser: http://git.debian.org/?p=debian-science/packages/freecad.git
 Vcs-Git: git://git.debian.org/git/debian-science/packages/freecad.git
-Homepage: http://juergen-riegel.net/FreeCAD/Docu/index.php?title=Main_Page
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libtool, automake, 
- autoconf, libboost-dev, libboost-date-time-dev, libboost-filesystem-dev,
+Homepage: https://sourceforge.net/apps/mediawiki/free-cad/index.php?title=Main_Page
+Build-Depends: debhelper (>= 7.0.50~), cmake, 
+ libboost-dev, libboost-date-time-dev, libboost-filesystem-dev,
  libboost-graph-dev, libboost-iostreams-dev, libboost-program-options-dev,
  libboost-regex-dev, libboost-serialization-dev, libboost-signals-dev,
- libboost-python-dev, python-dev, python-support,
+ libboost-thread-dev, libboost-python-dev, python-dev, python-support,
  libqt4-dev, libxt-dev, libxext-dev, libxmu-dev, libxi-dev, libx11-dev,
- libcoin60-dev, libsoqt4-dev (>= 1.4.2~svn20090224), libeigen3-dev, libgl1-mesa-dev,
- zlib1g-dev, libxerces-c2-dev, libopencascade-foundation-dev, libopencascade-modeling-dev, 
+ libcoin60-dev, libsoqt4-dev, libeigen3-dev,
+ zlib1g-dev, libxerces-c2-dev, libopencascade-foundation-dev,
+ libopencascade-modeling-dev, libopencascade-ocaf-dev, 
  libopencascade-visualization-dev, python-cxx-dev, libswscale-dev, 
- libzipios++-dev, swig, gfortran, libqtwebkit-dev
-Standards-Version: 3.9.2
+ libzipios++-dev, swig, gfortran, f2c, libqtwebkit-dev, libspnav-dev, libfreetype6-dev
+Standards-Version: 3.9.1
 
 Package: freecad
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
-Recommends: python-pivy python-matplotlib
+Recommends: python-pivy, python
 Suggests: freecad-doc
-Description: Extensible Open Source CAx program (alpha)
+Description: Extensible Open Source CAx program (beta)
  FreeCAD is an Open Source CAx RAD based on OpenCasCade, Qt and Python.
  It features some key concepts like macro recording, workbenches, ability
  to run as a server and dynamically loadable application extensions and
