--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -128,6 +128,8 @@ SET(PartGui_SRCS
     SoFCShapeObject.h
     SoBrepShape.cpp
     SoBrepShape.h
+    SoBrepFaceSet.cpp
+    SoBrepFaceSet.h
     ViewProvider.cpp
     ViewProvider.h
     ViewProviderExt.cpp
