Draft: fixed cmake and installer stuff with removed draftlibs

--- a/src/Mod/Draft/CMakeLists.txt
+++ b/src/Mod/Draft/CMakeLists.txt
@@ -20,16 +20,7 @@ SET(Draft_SRCS
 )
 SOURCE_GROUP("" FILES ${Draft_SRCS})
 
-SET(DraftLibs_SRCS
-    draftlibs/dxfColorMap.py
-    draftlibs/dxfImportObjects.py
-    draftlibs/dxfLibrary.py
-    draftlibs/dxfReader.py
-    draftlibs/__init__.py
-)
-SOURCE_GROUP("draftlibs" FILES ${DraftLibs_SRCS})
-
-SET(all_files ${Draft_SRCS} ${DraftLibs_SRCS})
+SET(all_files ${Draft_SRCS})
 
 ADD_CUSTOM_TARGET(Draft ALL
     SOURCES ${all_files}
@@ -37,13 +28,6 @@ ADD_CUSTOM_TARGET(Draft ALL
 
 fc_copy_sources(Draft "${CMAKE_BINARY_DIR}/Mod/Draft" ${all_files})
 
-
-INSTALL(
-    FILES
-        ${DraftLibs_SRCS}
-    DESTINATION
-        Mod/Draft/draftlibs
-)
 INSTALL(
     FILES
         ${Draft_SRCS}
