0001160: Freecad sometimes 'forgets' the ability to handle stp files

--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -50,6 +50,8 @@ if(MSVC)
     set_target_properties(ImportGui PROPERTIES DEBUG_OUTPUT_NAME "ImportGui_d")
     set_target_properties(ImportGui PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
     set_target_properties(ImportGui PROPERTIES PREFIX "../")
+    # Set special compiler flag to convert a SIGSEV into an exception
+    set_target_properties(ImportGui PROPERTIES COMPILE_FLAGS "/EHa")
 elseif(MINGW)
     set_target_properties(ImportGui PROPERTIES SUFFIX ".pyd")
     set_target_properties(ImportGui PROPERTIES DEBUG_OUTPUT_NAME "ImportGui_d")
