Fix error in CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,7 +212,7 @@ MARK_AS_ADVANCED(FORCE FREECAD_LIBPACK_CHECKFILE6X FREECAD_LIBPACK_CHECKFILE7X)
     if(NOT DEFINED OCE_DIR)
         if(UNIX)
             set(OCE_DIR "/usr/local/share/cmake/")
-        elif(WIN32)
+        elseif(WIN32)
             set(OCE_DIR "c:/OCE-0.4.0/share/cmake")
         endif()
     endif()
