finish move tool

--- a/src/Mod/Machining_Distortion/CMakeLists.txt
+++ b/src/Mod/Machining_Distortion/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(MachDist_SRCS
 	MachDistAnalysis.py
 	MachDistIsostatic.py
 	MachDistAlignment.py
+	MachDistMoveTools.py
     Parameter.ui
     Material.ui
     Aligment.ui
