Add Job Control Dialog

--- a/src/Mod/Machining_Distortion/CMakeLists.txt
+++ b/src/Mod/Machining_Distortion/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(MachDist_SRCS
     Parameter.ui
     Material.ui
     Aligment.ui
+    JobControl.ui
 )
 SOURCE_GROUP("" FILES ${MachDist_SRCS})
 
