Start new Unit and Quantity system

--- a/src/Base/CMakeLists.txt
+++ b/src/Base/CMakeLists.txt
@@ -63,6 +63,8 @@ generate_from_xml(MatrixPy)
 generate_from_xml(RotationPy)
 generate_from_xml(PlacementPy)
 generate_from_xml(AxisPy)
+generate_from_xml(UnitPy)
+generate_from_xml(QuantityPy)
 
 if(SWIG_FOUND)
     execute_process(COMMAND ${SWIG_EXECUTABLE} -python -external-runtime ${CMAKE_CURRENT_BINARY_DIR}/swigpyrun.h)
@@ -136,6 +138,8 @@ SET(FreeCADBase_XML_SRCS
     PlacementPy.xml
     RotationPy.xml
     VectorPy.xml
+    QuantityPy.xml
+    UnitPy.xml
 )
 SOURCE_GROUP("XML" FILES ${FreeCADBase_XML_SRCS})
 
@@ -159,6 +163,15 @@ SET(FreeCADBase_UNITAPI_SRCS
     UnitsSchemaImperial1.cpp
     UnitsApi.y
     UnitsApi.l
+    Quantity.h
+    Quantity.cpp
+    QuantityPyImp.cpp
+    QuantityParser.l
+    QuantityParser.y
+    Unit.h
+    Unit.cpp
+    UnitPyImp.cpp
+    
 )
 SOURCE_GROUP("Units" FILES ${FreeCADBase_UNITAPI_SRCS})
 
